--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,10 @@ psycopg2-binary = "^2.9.9"
 pillow = "^10.2.0"
 pytest = "^8.1.1"
 django-ninja = "^1.1.0"
+redis = "^5.0.3"
+django-celery-results = "^2.5.1"
+django-celery-beat = "^2.6.0"
+requests-futures = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core"]
