--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r cinema/requirements.txt
-
+    - name: Enable Permissions
+      run: chmod +x cinema/api/tests.py
     - name: Run tests
+      
       run: cinema/api/tests.py
