--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r cinema/requirements.txt
-    - name: Enable Permissions
-      run: chmod +x cinema/api/tests.py
+    
     - name: Run tests
       
-      run: python3 cinema/api/tests.py
+      run: pytest 
