updated secret key

--- a/cinema/docker-compose.yml
+++ b/cinema/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - "5432:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
-    env_file:
+    env:
       - .env
 
   web:
@@ -32,7 +32,7 @@ services:
       - "8000:8000"
     depends_on:
       - my-postgres
-    env_file:
+    env:
       - .env
 
   celery_worker:
@@ -42,7 +42,7 @@ services:
       - .:/app
     depends_on:
       - my-postgres
-    env_file:
+    env:
       - .env
 
   celery_beat:
@@ -52,7 +52,7 @@ services:
       - .:/app
     depends_on:
       - my-postgres
-    env_file:
+    env:
       - .env
 
 volumes:
