--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,19 +11,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.x"
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r cinema/requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r cinema/requirements.txt
+
+      - name: Run tests
+        env:
+          SECRET_KEY: ${{ secrets.ACTION_SECRET }}
+        run: pytest cinema/movies/tests.py
+
+
     
-    - name: Run tests
-      
-      run: pytest cinema/movies/tests.py
