--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,11 +27,11 @@ jobs:
       - name: Run tests
         env:
           SECRET_KEY: ${{ secrets.ACTION_SECRET }}
-          DB_NAME: ${{ secrets.ACTION_SECRET }}
-          DB_USER: ${{ secrets.ACTION_SECRET }}
-          DB_PASSWORD: ${{ secrets.ACTION_SECRET }}
-          DB_HOST: ${{ secrets.ACTION_SECRET }}
-          DB_PORT: ${{ secrets.ACTION_SECRET }}
+          NAME: ${{ secrets.ACTION_SECRET }}
+          USER: ${{ secrets.ACTION_SECRET }}
+          PASSWORD: ${{ secrets.ACTION_SECRET }}
+          HOST: ${{ secrets.ACTION_SECRET }}
+          PORT: ${{ secrets.ACTION_SECRET }}
         run: pytest cinema/movies/tests.py
 
 
