updated the redis setup

--- a/cinema/docker-compose.yml
+++ b/cinema/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   my-postgres:
     image: postgres:latest
     container_name: db
+    env_file:
+      - .env
     environment:
       POSTGRES_DB: ${DB_NAME}
       POSTGRES_USER: ${DB_USER}
@@ -17,6 +19,8 @@ services:
     build:
       context: .
       dockerfile: ./DockerFile
+    env_file:
+      - .env
     container_name: django
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
@@ -31,27 +35,51 @@ services:
       - "8000:8000"
     depends_on:
       - my-postgres
+      - redis
+    
 
 
   celery_worker:
     build:
       context: .
       dockerfile: ./DockerFile
+    env_file:
+      - .env
     command: celery -A cinema.celery worker --pool=solo --loglevel=info
     volumes:
       - .:/app
     depends_on:
       - my-postgres
+      - redis
 
   celery_beat:
     build:
       context: .
       dockerfile: ./DockerFile
+    env_file:
+      - .env
     command: celery -A cinema.celery beat --loglevel=info
     volumes:
       - .:/app
     depends_on:
       - my-postgres
+      - redis
+
+  redis:
+    image: redis:latest
+    env_file:
+      - .env
+    restart: always
+    ports:
+      - "6379:6379"
+    volumes:
+      - cache:/data
+    environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - REDIS_PORT=${REDIS_PORT}
+      - REDIS_DATABASES=${REDIS_DATABASES}
 
 volumes:
   db_data:
+  cache:
+    driver: local
