--- a/cinema/.env.example
+++ b/cinema/.env.example
@@ -1,5 +1,9 @@
+SECRET_KEY=django-insecure-agd+buu1%h#k86^6ybl1%cen&^xagek1hn@l22tcda(6rx#ie9
 DB_NAME=ninja
 DB_USER=postgres
 DB_PASSWORD=mummy
 DB_HOST=127.0.0.1
 DB_PORT=5432
+REDIS_PASSWORD=my-password
+REDIS_PORT=6379
+REDIS_DATABASES=16
