updated .env file

--- a/cinema/.env.example
+++ b/cinema/.env.example
@@ -4,6 +4,8 @@ DB_USER=postgres
 DB_PASSWORD=mummy
 DB_HOST=127.0.0.1
 DB_PORT=5432
+CELERY_BROKER_URL= redis://localhost:6379
+CELERY_RESULT_BACKEND= redis://localhost:6379
 REDIS_PASSWORD=my-password
 REDIS_PORT=6379
 REDIS_DATABASES=16
