updated the docker file

--- a/cinema/.env.example
+++ b/cinema/.env.example
@@ -2,10 +2,11 @@ SECRET_KEY=django-insecure-agd+buu1%h#k86^6ybl1%cen&^xagek1hn@l22tcda(6rx#ie9
 DB_NAME=ninja
 DB_USER=postgres
 DB_PASSWORD=mummy
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=5432
-CELERY_BROKER_URL= redis://localhost:6379
-CELERY_RESULT_BACKEND= redis://localhost:6379
+APP_URL=127.0.0.1
+CELERY_BROKER_URL="redis://redis:6379/0"
+CELERY_RESULT_BACKEND="redis://redis:6379/0"
 REDIS_PASSWORD=my-password
 REDIS_PORT=6379
 REDIS_DATABASES=16
